Fix empty preference strings